# c_alloc

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build-script.yml
src/: CMakeLists.txt  alloc.c
src/include/c_alloc/: alloc.h
